src/container/Login/login.scss
.login {
  position: fixed;
  background: white;
  width: 50%;
  height: 50%;
  z-index: 999;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 6px;
  // box-shadow: 0 0 4px #c4c4c4;
  border: 1px solid;
  .close {
  }
  .buttons-container {
    .login-header {
      color: black;
      font-weight: 500;
      margin-top: auto;
      font-size: 2em;
    }
    .helper {
      color: #000000;
      margin-bottom: auto;
      font-size: 1.2em;
    }
    .google-btn {
      margin-bottom: unset;
    }
    .facebook-btn {
      margin-bottom: auto;
    }
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
  }
}

